--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,13 @@ Doku/Bericht/main.out
 Doku/Bericht/main.pdf
 Doku/Bericht/main.synctex.gz
 Doku/Bericht/main.toc
+*.aux
+*.bbl
+*.lof
+*.log
+*.lof
+*.blg
+*.bbl
+*.aux
+*.gz
+*.toc
