--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,10 @@ Doku/Bericht/main.out
 Doku/Bericht/main.pdf
 Doku/Bericht/main.synctex.gz
 Doku/Bericht/main.toc
+Doku/Bericht/main.aux
+Doku/Bericht/main.bcf
+Doku/Bericht/main.lof
+Doku/Bericht/main.log
+Doku/Bericht/main.pdf
+Doku/Bericht/main.synctex.gz
+Doku/Bericht/main.toc
